--- a/src/static/styles/custom.css
+++ b/src/static/styles/custom.css
@@ -4,6 +4,8 @@
 
 body {
   margin: 4em;
+  background-color: #f5f5f5; /* Light gray */
+  color: #333; /* Dark gray */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -16,4 +18,15 @@ body {
 
 span p {
   display: inline;
+}
+
+
+button {
+  background-color: #fff; /* White */
+  color: #333; /* Dark gray */
+  border: 1px solid #ccc; /* Light gray border */
+}
+
+button:hover {
+  background-color: #eee; /* Lighter gray when hovered */
 }
