--- a/src/views/hello.html
+++ b/src/views/hello.html
@@ -19,11 +19,13 @@
       <h1>Hello, World</h1>
       <form>
         <input type="text" id="appid" value="ee74ce78-43a4-4096-8f5f-978533ddf46b">
-      </form>
+      
       <button onclick="deeplink()">Navigate using subEntityId</button>
       <br/>
       <p id="deeplink">Deeplink: </p>
       <br/>
+      <button onclick="updatedeeplink()">Update deeplink with new appid</button>
+    </form>
       <span>
         <p>Your app is running</p>
         <p id="hubState"></p>
