--- a/src/views/hello.html
+++ b/src/views/hello.html
@@ -17,11 +17,11 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div>
       <h1>Hello, World</h1>
-      <p>Specify this apps appid (if its different from the default)</p>
+      <p>Specify this apps id (if its different from the default)</p>
       <form>
-        <input type="text" id="appid" value="ee74ce78-43a4-4096-8f5f-978533ddf46b">
+        app id: <input type="text" id="appid" value="ee74ce78-43a4-4096-8f5f-978533ddf46b">
         <br/>
-        <input type="text" id="specifysubentityid" value="task1234">
+        subentityid : <input type="text" id="specifysubentityid" value="task1234">
         <br/>
         <button onclick="opendeeplink()">Navigate to this app using the subEntityID</button>
       <br/>
